--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "enable": true
   },
   "compilerOptions": {
-    "baseUrl": ".",
     "allowJs": true,
     "checkJs": true,
     "outDir": "../../dist/typescript",
@@ -16,6 +15,10 @@
     "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "module": "es2022",
+    "moduleResolution": "NodeNext",
+    "lib": [
+      "ESNext"
+    ],
     "paths": {
       "lib/*": [
         "src/lib/*"
