--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jest": "^28.1.1",
     "rimraf": "^3.0.2",
     "webpack": "^5.73.0",
-    "webpack-config-jaid": "^17.0.0"
+    "webpack-config-jaid": "^17.0.0",
+    "nan": "^2.17.0"
   },
   "scripts": {
     "clean": "rimraf dist/",
