--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "outDir": "../../dist/typescript",
+    "outDir": "./dist/typescript",
     "newLine": "lf",
     "declaration": true,
     "emitDeclarationOnly": true,
@@ -17,7 +17,7 @@
     "module": "es2022",
     "moduleResolution": "NodeNext",
     "lib": [
-      "ESNext"
+      "esnext"
     ],
   }
 }
