--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
-  "webpackConfigJaid": "nodeLib",
   "version": "4.8.0",
+  "type": "module",
+  "name": "tsconfig-jaid",
+  "description": "Extendable TypeScript config for my Node projects.",
+  "keywords": [
+    "config",
+    "tsc",
+    "tsconfig",
+    "typescript",
+    "typescript-config",
+    "typescript-shareable-config"
+  ],
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
+  "homepage": "https://github.com/Jaid/tsconfig-jaid",
+  "funding": "https://github.com/sponsors/jaid",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaid/tsconfig-jaid"
+  },
   "devDependencies": {
     "babel-jest": "^29.6.4",
     "babel-preset-jaid": "^17.0.0",
@@ -13,6 +29,7 @@
     "webpack-config-jaid": "^17.4.2",
     "nan": "^2.17.0"
   },
+  "webpackConfigJaid": "nodeLib",
   "scripts": {
     "clean": "rimraf dist/",
     "babel:prod": "rimraf dist/transpiled/production && NODE_ENV=production babel --out-dir dist/transpiled/production --source-maps true src",
@@ -25,22 +42,5 @@
     "test:dev": "npm run build:dev && NODE_ENV=test MAIN=$(npx find-by-extension-cli js --fullPath --cwd dist/package/development) jest --runInBand",
     "test:debug": "DEBUG=\"$DEBUG,$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
-  },
-  "name": "tsconfig-jaid",
-  "description": "Extendable TypeScript config for my Node projects.",
-  "funding": "https://github.com/sponsors/jaid",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jaid/tsconfig-jaid"
-  },
-  "homepage": "https://github.com/Jaid/tsconfig-jaid",
-  "keywords": [
-    "config",
-    "tsc",
-    "tsconfig",
-    "typescript",
-    "typescript-config",
-    "typescript-shareable-config"
-  ],
-  "type": "module"
+  }
 }
