--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "webpack-config-jaid": "^17.4.2",
     "nan": "^2.17.0"
   },
-  "webpackConfigJaid": "nodeLib",
   "scripts": {
     "clean": "rimraf dist/",
     "babel:prod": "rimraf dist/transpiled/production && NODE_ENV=production babel --out-dir dist/transpiled/production --source-maps true src",
@@ -42,5 +41,6 @@
     "test:dev": "npm run build:dev && NODE_ENV=test MAIN=$(npx find-by-extension-cli js --fullPath --cwd dist/package/development) jest --runInBand",
     "test:debug": "DEBUG=\"$DEBUG,$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
-  }
+  },
+  "webpackConfigJaid": "nodeLib"
 }
