--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "type": "git",
     "url": "https://github.com/jaid/tsconfig-jaid"
   },
+  "dependencies": {
+    "type-fest": "^4.3.1",
+    "typescript": "^5.2.2"
+  },
   "devDependencies": {
     "babel-jest": "^29.6.4",
     "babel-preset-jaid": "^17.0.0",
     "eslint": "^8.48.0",
     "eslint-config-jaid": "^7.0.4",
     "jest": "^29.6.4",
+    "nan": "^2.17.0",
     "rimraf": "^5.0.1",
+    "tsconfig-jaid": "^4.10.0",
     "webpack": "^5.88.2",
-    "webpack-config-jaid": "^17.4.2",
-    "nan": "^2.17.0"
+    "webpack-config-jaid": "^17.4.2"
   },
   "scripts": {
     "clean": "rimraf dist/",
