Added allowArbitraryExtensions and typeRoots
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "tsconfig-jaid/base",
-  "compilerOptions": {
-    "allowArbitraryExtensions": true,
-    "typeRoots": [
-      "./src/types"
-    ]
-  }
+  "extends": "tsconfig-jaid/base"
 }
