--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "babel-jest": "^29.7.0",
     "babel-preset-jaid": "^17.0.0",
     "eslint": "^8.49.0",
-    "eslint-config-jaid": "^8.9.0",
+    "eslint-config-jaid": "^8.11.0",
     "jest": "^29.7.0",
+    "map-obj": "^5.0.2",
     "nan": "^2.18.0",
     "rimraf": "^5.0.1",
     "tsconfig-jaid": "^5.2.0",
@@ -35,17 +36,7 @@
     "webpack-config-jaid": "^17.4.2"
   },
   "scripts": {
-    "clean": "rimraf dist/",
-    "babel:prod": "rimraf dist/transpiled/production && NODE_ENV=production babel --out-dir dist/transpiled/production --source-maps true src",
-    "babel:dev": "rimraf dist/transpiled/development && NODE_ENV=development babel --out-dir dist/transpiled/development src",
-    "babel:test": "rimraf dist/transpiled/test && NODE_ENV=test babel --out-dir dist/transpiled/test src",
-    "build:prod": "NODE_ENV=production webpack",
-    "build:dev": "NODE_ENV=development webpack",
-    "test": "exit 0",
-    "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
-    "test:dev": "npm run build:dev && NODE_ENV=test MAIN=$(npx find-by-extension-cli js --fullPath --cwd dist/package/development) jest --runInBand",
-    "test:debug": "DEBUG=\"$DEBUG,$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
-    "prepareActionJest": "npm run build:prod"
+    "build": "tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react"
   },
   "webpackConfigJaid": "nodeLib"
 }
