--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rimraf": "^5.0.1",
     "tsconfig-jaid": "^5.2.0",
     "webpack": "^5.88.2",
-    "webpack-config-jaid": "^17.4.2"
+    "webpack-config-jaid": "^17.4.2",
+    "yargs": "^17.7.2"
   },
   "scripts": {
     "build": "tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react"
