--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "yargs": "^17.7.2"
   },
   "scripts": {
-    "build": "tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react"
+    "build": "npx @atao60/fse-cli emptyDir out/package && tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react",
+    "release": "npm run build && npm publish out/package/*"
   },
   "webpackConfigJaid": "nodeLib"
 }
