--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "yargs": "^17.7.2"
   },
   "scripts": {
-    "build": "npx @atao60/fse-cli emptyDir out/package && tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react",
-    "release": "npm run build && npm publish out/package/*"
+    "build": "fse-cli emptyDir out/package && tsx src/build.ts && tsx src/build.ts node && tsx src/build.ts react",
+    "release": "npm run build && find out/package -mindepth 1 -maxdepth 1 -exec npm publish {} \\;"
   },
   "webpackConfigJaid": "nodeLib"
 }
